--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,17 +2,20 @@
 
 - type: github
   icon: "fab fa-github"
+  url: "https://github.com/tsdocode/tsdocode"
 
 - type: twitter
   icon: "fa-brands fa-x-twitter"
+  url: "https://x.com/tsdocode/"
 
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
-
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+  url: "tsdocode@gmail.com"
+  
+# - type: rss
+#   icon: "fas fa-rss"
+#   noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
